@@ -1095,6 +1095,15 @@
 				</tr>
 			</table>
 		</div>
+		<div id="divi2clocal">
+			<br>
+			<table class="display" id="hardwareparamsi2clocal" border="0" cellpadding="0" cellspacing="20">
+				<tr>
+					<td align="right" style="width:110px"><label id="lbli2cname" for="name"><span data-i18n="Device type"></span>:</label></td>
+					<td><select id="comboi2clocal" style="width:410px" class="combobox ui-corner-all"></select></td>
+				</tr>
+			</table>
+		</div>
     <div id="divbaudratemysensors">
       <table class="display" id="hardwareparamsbaudratemysensors" border="0" cellpadding="0" cellspacing="20">
         <tr>
